Updated maven compiler configuration as occasionaly running out of permgen space when compiling.
	modified:   wsUploadClient/pom.xml