@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>idas.chox</groupId>
@@ -31,6 +31,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
+                    <fork>true</fork>
+                    <meminitial>128m</meminitial>
+                    <maxmem>1024m</maxmem>
+                    <compilerArgs>
+                        <arg>-XX:MaxPermSize=256m</arg>
+                    </compilerArgs>
                     <source>1.7</source>
                     <target>1.7</target>
                 </configuration>
@@ -53,12 +59,12 @@
                             </wsdlFiles -->
                             <wsdlUrls>
                                 <wsdlUrl>https://www.idaschox.com/services/UploadService?wsdl</wsdlUrl>
-<!--                                <wsdlUrl>https://localhost:8443/services/UploadService?wsdl</wsdlUrl>-->
-<!--                                <wsdlUrl>https://test.idaschox.com/services/UploadService?wsdl</wsdlUrl>-->
+                                <!--                                <wsdlUrl>https://localhost:8443/services/UploadService?wsdl</wsdlUrl>-->
+                                <!--                                <wsdlUrl>https://test.idaschox.com/services/UploadService?wsdl</wsdlUrl>-->
                             </wsdlUrls>
-                           <wsdlLocation>https://www.idaschox.com/services/UploadService?wsdl</wsdlLocation>
-<!--                           <wsdlLocation>https://localhost:8443/services/UploadService?wsdl</wsdlLocation>-->
-<!--                            <wsdlLocation>https://test.idaschox.com/services/UploadService?wsdl</wsdlLocation> -->
+                            <wsdlLocation>https://www.idaschox.com/services/UploadService?wsdl</wsdlLocation>
+                            <!--                           <wsdlLocation>https://localhost:8443/services/UploadService?wsdl</wsdlLocation>-->
+                            <!--                            <wsdlLocation>https://test.idaschox.com/services/UploadService?wsdl</wsdlLocation> -->
                             <staleFile>${project.build.directory}/jaxws/stale/UploadService.stale</staleFile>
                         </configuration>
                     </execution>
